--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "v-mask": "^2.3.0",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.14",
+    "vue-i18n": "^8.27.2",
     "vue-kinesis": "^1.2.3",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1",
