--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.8.3",
+    "face-api.js": "^0.22.2",
     "jwt-decode": "^3.1.2",
     "v-mask": "^2.3.0",
     "vee-validate": "^3.4.5",
