--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.14",
     "vue-i18n": "^8.27.2",
     "vue-kinesis": "^1.2.3",
+    "vue-meta": "^2.4.0",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1",
     "vue-toastification": "^1.7.14",
