--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1",
     "vue-toastification": "^1.7.14",
+    "vue-web-cam": "^1.9.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
