--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "v-mask": "^2.3.0",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.14",
+    "vue-core-video-player": "^0.2.0",
     "vue-i18n": "^8.27.2",
     "vue-kinesis": "^1.2.3",
     "vue-moment": "^4.1.0",
@@ -36,8 +37,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^9.19.2",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "vue-template-compiler": "^2.6.14"
