--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.15.14",
     "face-api.js": "^0.22.2",
     "jwt-decode": "^3.1.2",
+    "quagga": "^0.12.1",
     "v-mask": "^2.3.0",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.14",
